# src/docs/openapi.json
@@ -18,6 +18,10 @@
     {
       "name": "profiles",
       "description": "Profile data methods"
+    },
+    {
+      "name": "friends",
+      "description": "Friendship"
     }
   ],
   "paths": {
@@ -84,19 +88,7 @@
             "$ref": "#/components/responses/IncorrectInputLoginDataError"
           },
           "404": {
-            "description": "User not found",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "properties": {
-                    "msg": {
-                      "type": "string",
-                      "example": "User not found"
-                    }
-                  }
-                }
-              }
-            }
+            "$ref": "#/components/responses/NotFoundError"
           },
           "500": {
             "$ref": "#/components/responses/InternalServerError"
@@ -139,11 +131,36 @@
       }
     },
     "/profiles": {
+      "get": {
+        "tags": [
+          "profiles"
+        ],
+        "summary": "Gets all profiles",
+        "responses": {
+          "200": {
+            "description": "Succesful got all profiles",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "properties": {
+                    "profiles": {
+                      "type": "array",
+                      "items": {
+                        "$ref": "#/components/schemas/Profile"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
       "put": {
         "tags": [
           "profiles"
         ],
-        "summary": "Update a profile by its id",
+        "summary": "Updates a profile by its id",
         "security": [
           {
             "AnyGoAuth": []
@@ -155,6 +172,196 @@
           },
           "401": {
             "$ref": "#/components/responses/UnauthorizedError"
+          },
+          "500": {
+            "$ref": "#/components/responses/InternalServerError"
+          }
+        }
+      }
+    },
+    "/friends/{friend_id}": {
+      "get": {
+        "parameters": [
+          {
+            "name": "friend_id",
+            "schema": {
+              "required": [
+                "friend_id"
+              ],
+              "properties": {
+                "user_id": {
+                  "type": "string",
+                  "example": "64f591d34f60c2bae4400000"
+                }
+              }
+            },
+            "in": "path",
+            "required": true
+          }
+        ],
+        "tags": [
+          "friends"
+        ],
+        "summary": "Request for friendship",
+        "security": [
+          {
+            "AnyGoAuth": []
+          }
+        ],
+        "responses": {
+          "201": {
+            "$ref": "#/components/responses/FriendshipData"
+          },
+          "401": {
+            "$ref": "#/components/responses/UnauthorizedError"
+          },
+          "404": {
+            "$ref": "#/components/responses/NotFoundError"
+          },
+          "500": {
+            "$ref": "#/components/responses/InternalServerError"
+          }
+        }
+      },
+      "put": {
+        "parameters": [
+          {
+            "name": "friend_id",
+            "schema": {
+              "required": [
+                "friend_id"
+              ],
+              "properties": {
+                "user_id": {
+                  "type": "string",
+                  "example": "64f591d34f60c2bae4400000"
+                }
+              }
+            },
+            "in": "path",
+            "required": true
+          }
+        ],
+        "tags": [
+          "friends"
+        ],
+        "summary": "Request for friendship",
+        "security": [
+          {
+            "AnyGoAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/components/responses/FriendshipData"
+          },
+          "401": {
+            "$ref": "#/components/responses/UnauthorizedError"
+          },
+          "404": {
+            "$ref": "#/components/responses/NotFoundError"
+          },
+          "500": {
+            "$ref": "#/components/responses/InternalServerError"
+          }
+        }
+      }
+    },
+    "/friends/accept/{friend_id}": {
+      "get": {
+        "parameters": [
+          {
+            "name": "friend_id",
+            "schema": {
+              "required": [
+                "friend_id"
+              ],
+              "properties": {
+                "user_id": {
+                  "type": "string",
+                  "example": "64f591d34f60c2bae4400000"
+                }
+              }
+            },
+            "in": "path",
+            "required": true
+          }
+        ],
+        "tags": [
+          "friends"
+        ],
+        "summary": "Request for friendship",
+        "security": [
+          {
+            "AnyGoAuth": []
+          }
+        ],
+        "responses": {
+          "201": {
+            "$ref": "#/components/responses/FriendshipData"
+          },
+          "401": {
+            "$ref": "#/components/responses/UnauthorizedError"
+          },
+          "404": {
+            "$ref": "#/components/responses/NotFoundError"
+          },
+          "500": {
+            "$ref": "#/components/responses/InternalServerError"
+          }
+        }
+      }
+    },
+    "/friends/unsubscribe/{friend_id}": {
+      "delete": {
+        "parameters": [
+          {
+            "name": "friend_id",
+            "schema": {
+              "required": [
+                "friend_id"
+              ],
+              "properties": {
+                "user_id": {
+                  "type": "string",
+                  "example": "64f591d34f60c2bae4400000"
+                }
+              }
+            },
+            "in": "path",
+            "required": true
+          }
+        ],
+        "tags": [
+          "friends"
+        ],
+        "summary": "Request for friendship",
+        "security": [
+          {
+            "AnyGoAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "properties": {
+                    "msg": {
+                      "type": "string",
+                      "example": "Success"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/UnauthorizedError"
+          },
+          "404": {
+            "$ref": "#/components/responses/NotFoundError"
           },
           "500": {
             "$ref": "#/components/responses/InternalServerError"
@@ -198,6 +405,33 @@
           "about": {
             "type": "string",
             "example": "Меня зовут Илон Маск и я очень люблю сервис AnyGo :D"
+          }
+        }
+      },
+      "Friendship": {
+        "description": "User relations",
+        "type": "object",
+        "required": [
+          "user1",
+          "user2",
+          "status"
+        ],
+        "properties": {
+          "user1": {
+            "type": "string",
+            "example": "64f591d34f60c2bae4400000"
+          },
+          "user2": {
+            "type": "string",
+            "example": "64f591d34f60c2bae4400000"
+          },
+          "status": {
+            "type": "number",
+            "enum": [
+              1,
+              2,
+              3
+            ]
           }
         }
       }
@@ -333,6 +567,21 @@
           }
         }
       },
+      "NotFoundError": {
+        "description": "Not found",
+        "content": {
+          "application/json": {
+            "schema": {
+              "properties": {
+                "msg": {
+                  "type": "string",
+                  "example": "... not found"
+                }
+              }
+            }
+          }
+        }
+      },
       "InternalServerError": {
         "description": "Internal server error",
         "content": {
@@ -396,6 +645,16 @@
           "application/json": {
             "schema": {
               "$ref": "#/components/schemas/Profile"
+            }
+          }
+        }
+      },
+      "FriendshipData": {
+        "description": "User relations",
+        "content": {
+          "application/json": {
+            "schema": {
+              "$ref": "#/components/schemas/Friendship"
             }
           }
         }
